--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,11 @@
     box-sizing: border-box;
 }
 
+:root {
+    --primary-color: #5e6085;
+    --secondary-color: #000958;
+}
+
 html {
     font-size: 62.5%;
 }
@@ -9,6 +14,10 @@ html {
 body {
     font-size: 1.6rem;
     font-family: "Poppins", sans-serif;
+}
+/* Common */
+a {
+    text-decoration: none;
 }
 
 h1,
@@ -27,4 +36,70 @@ textarea,
 button {
     font-size: inherit;
     font-family: inherit;
+}
+
+.container {
+    width: 1170px;
+    max-width: calc(100% - 48px);
+    margin: 0 auto;
+}
+
+.btn {
+    --height: 56px;
+
+    display: inline-block;
+    text-align: center;
+    min-width: 130px;
+    height: var(--height);
+    line-height: var(--height);
+    border-radius: 99px;
+    border: 1px solid rgba(0, 9, 88, 0.7);
+    color: #000958;
+    font-size: 1.4rem;
+    font-weight: 600;
+}
+/* Header */
+.header {
+    padding: 26px 0;
+}
+
+.header___inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.header-logo img {
+    width: 37px;
+    height: 37px;
+}
+
+.navbar__list {
+    display: flex;
+}
+
+.navbar__link {
+    padding: 8px 18px;
+    color: var(--primary-color);
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 100%;
+}
+
+.navbar__link:hover {
+    color: var(--secondary-color);
+    font-size: 1.4rem;
+    text-shadow: -1px 0 currentColor;
+}
+
+.header-action__link:hover {
+    background-color: #000958;
+    color: #fff;
+}
+
+.header-action__link {
+    --height: 50px;
+    min-width: 118px;
+    margin-left: 36px;
+    transition: background-color, color, 0.5s ease-in-out;
 }
